<resources>
    <string name="app_name">Aztecs</string>
    <string name="lbl01">LOGIN</string>
    <string name="txt01">Enter Your Email</string>
    <string name="button01">Login Button</string>
    <string name="txt02">Enter Your Password</string>
    <string name="button02">Plant Store</string>
    <string name="button03">Fertilizer Store</string>
    <string name="txt03">ADMIN HOME PAGE</string>
    <string name="lbl02">Plant Store</string>
    <string name="lbl03">Item ID</string>
    <string name="txt04">Enter Item ID</string>
    <string name="lbl04">Item Name</string>
    <string name="txt05">Enter Item Name</string>
    <string name="lbl05">Quantity</string>
    <string name="txt06">Enter Quantity</string>
    <string name="lbl06">Price</string>
    <string name="txt07">Enter Price</string>
    <string name="button04">Add Item Button</string>
    <string name="button05">View All Button</string>
    <string name="button06">Update Button</string>
    <string name="button07">Delete Button</string>
    <string name="lbl07">Fertilizer Store</string>
    <string name="lbl08">Item ID</string>
    <string name="txt08">Enter Item ID</string>
    <string name="lbl09">Item Name</string>
    <string name="txt09">Enter Item Name</string>
    <string name="lbl10">Quantity</string>
    <string name="txt10">Enter Quantity</string>
    <string name="lbl11">Price</string>
    <string name="txt11">Enter Price</string>
    <string name="button08">AddItems</string>
    <string name="button09">View All</string>
    <string name="button10">Update</string>
    <string name="button11">Delete</string>
    <string name="button12">decrease</string>
    <string name="Button13">increase button</string>
    <string name="button14">decrease button</string>
    <string name="button15">increase button</string>
    <string name="button16">decrease button</string>
    <string name="button17">increase button</string>
    <string name="button18">decrease button</string>
    <string name="button19">increase button</string>
    <string name="button20">decrease button</string>
    <string name="button21">increase button</string>
    <string name="button22">Order button Plants Page</string>
    <string name="button23">Order button Fertilizer Page</string>

</resources>