<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewFertilizersPageActivity">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="421dp"
        android:layout_height="851dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background04" />

    <Button
        android:id="@+id/button18"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:background="@color/brown"
        android:hint="@string/button18"
        android:text="-"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal7"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="52dp"
        android:background="@color/brown"
        android:hint="@string/button19"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal7"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal6"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:background="@color/brown"
        android:hint="@string/button20"
        android:text="_"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button21"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="148dp"
        android:background="@color/brown"
        android:hint="@string/button21"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="171dp"
        android:layout_height="152dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fertilizer02" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="171dp"
        android:layout_height="152dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fertilizer01" />

    <TextView
        android:id="@+id/lbl25"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Item Name Albet Solution"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl26"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Quantity: 01"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl27"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="Price: 1000"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl28"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Item ID: F002"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl29"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Item Name: Miracle Gro"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl30"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Quantity: 01"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl31"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:text="Price: 1500"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl24"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Item ID: F001"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button22"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginTop="172dp"
        android:background="#2E9A2A"
        android:hint="@string/button22"
        android:text="ORDER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>